@@ -5,7 +5,7 @@ README
 LICENSE
 MANIFEST
 NEW
-THANX
+CREDITS
 TODO
 Makefile.PL
 examples/dict.pl
